@@ -9,16 +9,16 @@
 #
 # Inputs:
 #	1. GEISHA mouse orthology file tab delimited:
-#	    1. Chicken NCBI ID
+#	    1. Chicken EG ID
 # 	    2. Chicken gene name (not used)
 #	    3. GEISHA ID  (not used)
-#	    4. Human NCBI gene ID (not used)
-# 	    5. Mouse NCBI ID
-#	    6. Xenopus NCBI gene ID (not used)
-#	    7. Zebrafish NCBI Gene ID (not used)
+#	    4. Human EG gene ID (not used)
+# 	    5. Mouse EG ID
+#	    6. Xenopus EG gene ID (not used)
+#	    7. Zebrafish EG Gene ID (not used)
 #
 #	2. GEISHA Genes with Expression Assay Records file tab delimited:
-#	    1. Chicken NCBI gene ID     
+#	    1. Chicken EG gene ID     
 # 	    2. Chicken gene name (not used)
 #	    3. GEISHA ID BirdBase ID (not used)
 #	    4. Ensembl ID (not used)
@@ -27,11 +27,6 @@
 #	    7. locations (not used)
 #
 #	3. Configuration - see geishaload.config
-#	  . INPUT_FILE_* - path to file in load input file directory
-#         . INPUT_FILE_LOAD - path to load-ready file
-#         . QC_RPT - path to QC report
-#         . MGD_DBUSER - database user
-#	  . MGD_DBPASSWORDFILE - database password
 #
 # Outputs:
 #	 1. load ready file
@@ -58,9 +53,6 @@ import loadlib
 import db
 import clusterize
 
-print '%s' % mgi_utils.date()
-
-
 ####################################
 #
 # Globals
@@ -72,12 +64,12 @@ TAB= '\t'
 CRT = '\n'
 
 # EG ID/Chicken Marker associations from the database
-# {ncbiID:chicken marker key, ...}
-ncbiToChickenDict = {}
+# {egID:chicken marker key, ...}
+egToChickenDict = {}
 
 # EG ID/Mouse Marker associations from the database
-# {ncbiID:mouse marker key, ...}
-ncbiToMouseDict = {}
+# {egID:mouse marker key, ...}
+egToMouseDict = {}
 
 #
 # paths to input and output files
@@ -92,10 +84,10 @@ inFileExprPath = os.environ['INPUT_FILE']
 # This is the cleaned up load-ready input file
 loadFilePath = os.environ['INPUT_FILE_LOAD']
 
-# Chicken NCBI gene IDs from the expression file
+# Chicken EG gene IDs from the expression file
 exprSet = set([])
 
-# Chicken NCBI gene IDs mapped to one or more mouse NCBI IDs from orthology file
+# Chicken EG gene IDs mapped to one or more mouse EG IDs from orthology file
 mouseDict = {}
 
 #
@@ -105,10 +97,10 @@ qcRptPath = os.environ['QC_RPT']
 # QC report descriptions and column headings
 sep = '--------------------------------------------------\n'
 
-rptOne = 'Chicken NCBI IDs from expression file not in orthos file%s%s%s' % (CRT, CRT, sep)
-rptTwo = '%s%sChicken NCBI IDs not in database%s%s%s' % (CRT, CRT, CRT, CRT, sep)
+rptOne = 'Chicken EG IDs from expression file not in orthos file%s%s%s' % (CRT, CRT, sep)
+rptTwo = '%s%sChicken EG IDs not in database%s%s%s' % (CRT, CRT, CRT, CRT, sep)
 
-rptThree = '%s%sMouse NCBI IDs not in database%s%s%s' % (CRT, CRT,CRT, CRT, sep)
+rptThree = '%s%sMouse EG IDs not in database%s%s%s' % (CRT, CRT,CRT, CRT, sep)
 
 #
 # file descriptors
@@ -121,8 +113,16 @@ fpExprFile = ''
 fpLoadFile = ''
 fpQcRpt = ''
 
+#
+# Purpose: initialize file descriptors and database lookups
+# Returns: 0
+# Assumes: fpImits2 exists
+# Effects: Nothing
+# Throws: Nothing
+#
+
 def init():
-    global ncbiToChickenDict, ncbiToMouseDict
+    global egToChickenDict, egToMouseDict
     global fpOrthoFile, fpExprFile
     global fpLoadFile, fpQcRpt
 
@@ -153,8 +153,8 @@ def init():
 	exit('Could not open file for writing %s\n' % qcRptPath)
 
 
-    # get all chicken markers that are associated with ncbi IDs
-    results = db.sql('''select distinct a.accid as ncbiId, m._Marker_key
+    # get all chicken markers that are associated with EG IDs
+    results = db.sql('''select distinct a.accid as egId, m._Marker_key
 	from ACC_Accession a, MRK_Marker m
 	where a._MGIType_key = 2
 	and a._LogicalDB_key = 55
@@ -163,15 +163,15 @@ def init():
 	and m._Marker_Status_key in (1,3)
 	and m._Organism_key = 63''', 'auto')
     #
-    # create Chicken ncbiID to marker lookup from database
+    # create Chicken egID to marker lookup from database
     #
     for r in results:
-	ncbiId = r['ncbiId']
+	egId = r['egId']
 	markerKey = r['_Marker_key']
-	ncbiToChickenDict[ncbiId] = markerKey
+	egToChickenDict[egId] = markerKey
 
     # get all mouse markers
-    results = db.sql('''select distinct a.accID as ncbiId, m._Marker_key
+    results = db.sql('''select distinct a.accID as egId, m._Marker_key
 	    from ACC_Accession a, MRK_Marker m
 	    where a._MGIType_key = 2
 	    and a._LogicalDB_key = 55
@@ -180,9 +180,9 @@ def init():
 	    and m._Organism_key = 1''', 'auto')
 
     for r in results:
-	    ncbiId = r['ncbiId']
+	    egId = r['egId']
 	    markerKey = r['_Marker_key']
-	    ncbiToMouseDict[ncbiId] = markerKey
+	    egToMouseDict[egId] = markerKey
 
     return
 
@@ -194,27 +194,27 @@ def processInputFiles():
     line =  fpExprFile.readline()
     while line:
 	tokens = string.split(line, TAB)
-	ncbiChickenID = string.strip(tokens[0])
-	exprSet.add(ncbiChickenID)
+	egChickenID = string.strip(tokens[0])
+	exprSet.add(egChickenID)
 	line =  fpExprFile.readline()
     # remove header
     header = fpOrthoFile.readline()
     line = fpOrthoFile.readline()
     while line:
 	tokens = string.split(line, TAB)
-	ncbiChickenID = string.strip(tokens[0])
-	ncbiMouseIDs = string.strip(tokens[4])
+	egChickenID = string.strip(tokens[0])
+	egMouseIDs = string.strip(tokens[4])
 	# skip if no mouse ID(s)  on this line
-	if ncbiMouseIDs == '':
+	if egMouseIDs == '':
 	    line = fpOrthoFile.readline()
 	    continue
 	else:
-	    mouseList = string.split(ncbiMouseIDs, ',')
-	    mouseDict[ncbiChickenID] = mouseList
+	    mouseList = string.split(egMouseIDs, ',')
+	    mouseDict[egChickenID] = mouseList
 	#for id in mouseList:
-	#    if not mouseDict.has_key(ncbiChickenID):
-	#	mouseDict[ncbiChickenID] = []
-	#    mouseDict[ncbiChickenID].append(id)
+	#    if not mouseDict.has_key(egChickenID):
+	#	mouseDict[egChickenID] = []
+	#    mouseDict[egChickenID].append(id)
 	line = fpOrthoFile.readline()
 
 def process():
@@ -226,7 +226,7 @@ def process():
     mouseIdNotInDBSet = set([])
 
     for chickenID in exprSet:
-	# Join to orthos to get mouse ncbi Ids
+	# Join to orthos to get mouse eg Ids
 	mouseID = ''
 	error = 0
 	# get the mouse orthology, if none report
@@ -237,15 +237,15 @@ def process():
 	    chickenIdNotInSet.add(chickenID)
 	if error:
 	    continue
-	# verify chicken NCBI ID in database
-	if chickenID not in ncbiToChickenDict.keys():
+	# verify chicken EG ID in database
+	if chickenID not in egToChickenDict.keys():
 	    chickenIdNotInDBSet.add(chickenID)
 	    error = 1
-	# verify mouse NCBI ID in database
+	# verify mouse EG ID in database
 	currentClusterList = []
 	for mouseID in mouseIdList:
 	    currentClusterList.append([chickenID, mouseID])
-	    if mouseID not in ncbiToMouseDict.keys():
+	    if mouseID not in egToMouseDict.keys():
 		mouseIdNotInDBSet.add(mouseID)
 		error = 1
 	if error:
@@ -257,17 +257,17 @@ def process():
     # now resolve the ids to database keys; chicken and mouse gene keys
     # NOT SORTING BY ORGANISM for sequenceNum because we don't need to. 
     # If we find we need for this load we will need to create a mouse and a 
-    # chicken lookup by NCBI ID to determine which organism in order to 
+    # chicken lookup by EG ID to determine which organism in order to 
     # order correctly (mouse first then chicken)
     for clusterId in clusterDict.keys():
         idTuple = clusterDict[clusterId]
 	mouseKeyList = []
 	chickenKeyList = []
 	for id in idTuple:
-	    if id in ncbiToMouseDict.keys():
-		mouseKeyList.append(str(ncbiToMouseDict[id]))
-	    elif id in ncbiToChickenDict.keys():
-		chickenKeyList.append(str(ncbiToChickenDict[id]))
+	    if id in egToMouseDict.keys():
+		mouseKeyList.append(str(egToMouseDict[id]))
+	    elif id in egToChickenDict.keys():
+		chickenKeyList.append(str(egToChickenDict[id]))
 	    else:
 		print 'not chicken or mouse'
 	keyList = mouseKeyList + chickenKeyList
@@ -311,6 +311,7 @@ def closeFiles():
 # Main
 #
 ###########################
+print '%s' % mgi_utils.date()
  
 print 'initializing'
 init()
