@@ -1,3 +1,9 @@
+TAG: homologyload-tr11886-20
+DATE:03/04/2015
+STAFF: sc
+CHANGES: code cleanup - debug removal - convert all NCBI references to EG
+	for consistency
+
 TAG: homologyload-tr11886-19
 DATE:02/27/2015
 STAFF: sc
